--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Core LLM and LangChain packages
 langchain>=0.1.0
 langchain-experimental>=0.0.45
-langchain-openai>=0.1.0
+langchain-groq
 
 # Environment variable support
 python-dotenv>=1.0.0
